added the new methods to the address handler. modified the id in all other handlers
