# api/internal/dto/user/authenticate.go
@@ -1,6 +1,6 @@
 package user
 
 type Authenticate struct {
-	Email    string `json:"email"`
-	Password string `json:"password,omitempty"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
 }
