# api/internal/handlers/product/product_handler.go
@@ -47,7 +47,8 @@ func (h *ProductHandler) GetAll(c *gin.Context) {
 //	@Summary	Get the product
 //	@Tags		product
 //	@Produce	json
-//	@Router		/api/products/{id} [get]
+//	@Router		/api/products/:id [get]
+//	@Param		id	path	int	true	"Product ID"
 //	@Success	200 {object} dto.Product
 func (h *ProductHandler) GetById(c *gin.Context) {
 	id, err := helpers.ParseParamToUint(c.Param("id"))
@@ -98,8 +99,9 @@ func (h *ProductHandler) Save(c *gin.Context) {
 //	@Summary	Delete the product
 //	@Tags		product
 //	@Produce	json
-//	@Router		/api/products/{id} [delete]
+//	@Router		/api/products/:id [delete]
 //	@Success	204
+//	@Param		id	path	int	true	"Product ID"
 //	@Failure	400 {object} errdto.ErrorResponse
 //	@Failure	500 {object} errdto.ErrorResponse
 func (h *ProductHandler) Delete(c *gin.Context) {
